ajout du lancementde l'appli dans le README