@@ -1,2 +1,4 @@
 # TP_note_pendu
 https://github.com/Asminouch/TP_note_pendu 
+javac --module-path "C:\Users\asmah\Desktop\logiciel\javafx-sdk-24.0.1\lib" --add-modules javafx.controls -d bin src\*.java
+java --module-path "C:\Users\asmah\Desktop\logiciel\javafx-sdk-24.0.1\lib" --add-modules javafx.controls -cp bin Pendu
